atividades do dia 02/04

--- a/pages/03.html
+++ b/pages/03.html
@@ -35,7 +35,7 @@
         
         <label for="num"></label>
         <input type="number" id="num" name="num" value="0" required />
-        <button class="btnExecutar" onclick="exercicio3()">Executar</button>
+        <button class="btnExecutar" onclick="ex03()">Executar</button>
 
         <div id="resposta">
             <h2>Resposta da Atividade</h2>
